--- a/ODSTVisualRandomizer1/ODSTVisualRandomizer.csproj
+++ b/ODSTVisualRandomizer1/ODSTVisualRandomizer.csproj
@@ -128,6 +128,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="Properties\DataSources\ODSTVisualRandomizer1.Form1.datasource" />
+    <None Include="Properties\DataSources\ODSTVisualRandomizer1.Randomizer.datasource" />
     <None Include="Properties\DataSources\RandomizerSettings.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
